<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/android_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_android_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/header_menu"
            app:expandedTitleMarginStart="@dimen/expanded_toolbar_title_margin_start"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!--   <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:src="@drawable/mibebe_main"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />-->

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedscrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

<TableLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <TableRow
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_citas"
            android:layout_width="180dp"
            android:layout_height="140dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/imagencitas"
            android:scaleType="fitXY"
            android:src="@drawable/citas"
            android:text="@string/citas" />

        <ImageButton
            android:id="@+id/btn_examenes"
            android:layout_width="180dp"
            android:layout_height="140dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/imagenexamenes"
            android:scaleType="fitXY"
            android:src="@drawable/examenes"
            android:text="@string/examenes" />

    </TableRow>

    <TableRow
        android:id="@+id/table_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_chat"
            android:layout_width="180dp"
            android:layout_height="140dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/chat"
            android:scaleType="fitXY"
            android:src="@drawable/chat"
            android:text="@string/chat" />

        <ImageButton
            android:id="@+id/btn_infosalud"
            android:layout_width="180dp"
            android:layout_height="140dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/infosalud"
            android:scaleType="fitXY"
            android:src="@drawable/infosalud"
            android:text="@string/infosalud" />
    </TableRow>

    <TableRow
        android:id="@+id/table_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_tratamientos"
            android:layout_width="180dp"
            android:layout_height="140dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="tratamientos"
            android:scaleType="fitXY"
            android:src="@drawable/tratamientos"
            android:text="@string/tratamientos" />

        <ImageButton
            android:id="@+id/btn_hcsp"
            android:layout_width="180dp"
            android:layout_height="140dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/hcsp"
            android:scaleType="fitXY"
            android:src="@drawable/hcp"
            android:text="@string/hcsp" />


    </TableRow>


</TableLayout>

            <ImageButton
                android:id="@+id/btn_acercade"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="logo"
                android:src="@drawable/acercade"
                android:text="@string/logo" />
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>